<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Default to english -->
    <!-- Application -->
    <string name="app_name">FM Downline</string>
    <string name="latestUpdate">Latest update:</string>
    <string name="latestUpdateNever">never</string>

    <!-- No settings alert dialog -->
    <string name="noSettings">No settings</string>
    <string name="downlineHasNoSettings">Downline needs settings to work properly.</string>
    <string name="gotoSettings">Goto settings</string>
    <string name="exitApp">Stop app</string>

    <!-- Menu screen -->
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- Preferences -->
    <string name="distributorID">Distributor ID</string>
    <string name="distributorID_setting_pretext">Distributor ID is: </string>
    <string name="password">Password</string>
    <string name="change_password_sum">Change password</string>

    <!-- About alert dialog -->
    <string name="okButtonText">OK</string>
    <string name="aboutDownline">About Downline</string>

    <!-- FM Member fields -->
    <string name="memberName">name</string>
    <string name="memberLine">line</string>
    <string name="memberLevel">level</string>
    <string name="memberPersonalPoints">personal points</string>
    <string name="memberGroupPoints">group points</string>
    <string name="memberPoints">points</string>
    <string name="memberLevelProgress">level progress</string>
    <string name="memberEmailAddress">email address</string>
    <string name="memberPhoneNumber">phone number</string>
    <string name="memberEarnings">earnings</string>

    <!-- Level tab -->
    <string name="currentLevelLabel">Current level</string>
    <string name="startCurrentLevelLabel">Start level</string>
    <string name="stopCurrentLevelLabel">End of level</string>
    <string name="progressCurrentLevelLabel">Progress</string>
    <string name="leftCurrentLevelLabel">Leftover</string>
</resources>