<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/latestUpdate"
            android:id="@+id/textLatestUpdate"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView" android:src="@drawable/fmmember"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memberName"
                    android:id="@+id/labelMemberName"
                    />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memberLevel"
                    android:id="@+id/labelMemberLevel"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memberPoints"
                    android:id="@+id/labelMemberPoints"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memberLevelProgress"
                    android:id="@+id/labelMemberLevelProgress"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/memberEarnings"
                    android:id="@+id/labelMemberEarnings"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textMemberName"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textMemberLevel"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textMemberPoints"/>
            <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressLevel"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textMemberEarnings"/>
        </LinearLayout>
    </LinearLayout>
    <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="#ffff0000"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#E0EEEE">
        <ListView
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:id="@+id/listMembers"
                android:layout_weight="1"

                android:divider="@null"
                android:dividerHeight="10dp"
                android:listSelector="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                android:headerDividersEnabled="true"
                android:footerDividersEnabled="true"
                />
    </LinearLayout>
</LinearLayout>
